<resources>
    <string name="app_name">Premec</string>
    <string name="login_user">Usuario</string>
    <string name="login_remember_password">Recordar usuario y contraseña</string>
    <string name="login_sign_in">Ingresar</string>
    <string name="login_title">Ingresar</string>
    <string name="form_list_title">Formularios</string>
    <string name="splash_title">Splash</string>
    <string name="login_password">Contraseña</string>
    <string name="logout">Cerrar sesión</string>
    <string name="logout_title_dialog">Salir</string>
    <string name="logout_title_messsage">¿Desea cerrar la sesión?</string>
    <string name="delete_title_dialog">Eliminar formulario</string>
    <string name="delete_title_messsage">Si el formulario no fue enviado, se perderán los datos cargados</string>
    <string name="delete_yes">Eliminar</string>
    <string name="delete_no">Cancelar</string>
    <string name="yes">SI</string>
    <string name="no">NO</string>
</resources>