<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="ar.com.premec.ui.fragment.splash.SplashFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splashFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="ar.com.premec.ui.fragment.login.LoginFragment"
        android:label="@string/login_title"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_formsListFragment"
            app:destination="@id/formsListFragment" />
    </fragment>
    <fragment
        android:id="@+id/formsListFragment"
        android:name="ar.com.premec.ui.fragment.forms.list.FormListFragment"
        android:label="@string/form_list_title"
        tools:layout="@layout/fragment_forms_list" />
</navigation>